2012-08-10  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mel-q-ccl.el (q-encoding-ccl-decode-string): Remove duplicate
	definition for Emacs 23.1.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (ew-find-string-rule): Define own function for
	Emacs23 which has APEL with detect-mime-charset-string for it.
	(ew-find-charset-rule): Define only when needed.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (ew-find-string-rule): New function.
	(eword-encode-phrase-to-rword-list): Use it.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (tm-eword::string-to-ruled-words): Define own
	function for Emacs23 which has APEL with
	detect-mime-charset-string for it.
	(eword-encode-char-type, eword-encode-divide-into-charset-words)
	(eword-encode-charset-words-to-words): Define only when needed.

2012-07-29  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* eword-encode.el (tm-eword::string-to-ruled-words): New function.
	(eword-encode-split-string, eword-encode-phrase-to-rword-list):
	Use it.

2012-04-28  MORIOKA Tomohiko  <tomo@zinbun.kyoto-u.ac.jp>

	* README.ja, README.en (Bug reports): Modify for
	emacs-mime-{en|ja}@lists.chise.org.

2012-04-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* mime-parse.el (mime-parse-message): Use mime-read-Content-Type
	instead of mime-parse-Content-Type.

2012-04-07  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	* smtp.el (smtp-open-connection): Raise error when open connection
	function failed.

2012-03-20  Kazuhiro Ito  <kzhr@d1.dion.ne.jp>

	Support built-in GnuTLS for STARTTLS connection.
	* smtp.el (smtp-use-gnutls): New cutomizable variable.
	(smtp-open-gnutls-starttls-stream): New function.
	(smtp-submit-package): Respect smtp-use-gnutls's value.
	(smtp-send-buffer, smtp-send-buffer-by-myself): Do not
	decide smtp-open-connection-function's value here.
	(smtp-open-connection): Decide which open-connection-function is
	called here.  Respect smtp-use-gnutls's value.
